src/hosts/friday/k8s/apps/lldap/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lldap
  namespace: friday
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lldap
  template:
    metadata:
      labels:
        app: lldap
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: lldap
        image: lldap/lldap:v0.6.2-alpine-rootless@sha256:35df821899ec54c11eaab395e9c68e191e2582592cba343b0a904f6821aadcd2
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - name: lldap-data
          mountPath: /data
        - name: lldap-config
          mountPath: /data/lldap_config.toml
          subPath: lldap_config.toml
        - name: lldap-secrets
          mountPath: /run/secrets
          readOnly: true
      volumes:
      - name: lldap-data
        persistentVolumeClaim:
          claimName: lldap-data
      - name: lldap-config
        configMap:
          name: lldap-config
      - name: lldap-secrets
        secret:
          secretName: nix-secrets
