src/hosts/friday/k8s/apps/lldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: friday
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - ldap.we8.dev
    secretName: wildcard-we8-dev-tls
  rules:
  - host: ldap.we8.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lldap
            port:
              number: 17170
